rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__noninjective_coalesce_from_dimension.snap
---
source: cubesql/src/compile/mod.rs
expression: logical_plan
---
Projection: #coalesce(MultiTypeCube.dim_str0,Utf8("(none)"))
  Aggregate: groupBy=[[coalesce(#MultiTypeCube.dim_str0, #MultiTypeCube.Utf8("(none)") AS Utf8("(none)"))]], aggr=[[]]
    CubeScan: request={
  "measures": [],
  "dimensions": [
    "MultiTypeCube.dim_str0"
  ],
  "segments": []
}
