rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__noninjective_left_from_dimension.snap
---
source: cubesql/src/compile/mod.rs
expression: logical_plan
---
Projection: #left(MultiTypeCube.dim_str0,Int64(2))
  Aggregate: groupBy=[[left(#MultiTypeCube.dim_str0, Int64(2))]], aggr=[[]]
    CubeScan: request={
  "measures": [],
  "dimensions": [
    "MultiTypeCube.dim_str0"
  ],
  "segments": []
}
