rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__noninjective_nullif_from_dimension.snap
---
source: cubesql/src/compile/mod.rs
expression: logical_plan
---
Projection: #nullif(MultiTypeCube.dim_str0,Utf8("(none)"))
  Aggregate: groupBy=[[nullif(#MultiTypeCube.dim_str0, Utf8("(none)"))]], aggr=[[]]
    CubeScan: request={
  "measures": [],
  "dimensions": [
    "MultiTypeCube.dim_str0"
  ],
  "segments": []
}
